k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: node

  template:
    metadata:
      labels:
        app: node

    spec:
      containers:
      - name: app
        image: aniket036/backend-app:v1
        ports:
        - containerPort: 3000
