k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: node-app
spec:
  type: NodePort
  selector:
    app: node
  ports:
  - port: 3000
    targetPort: 3000
