k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: node-app

spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - port: 5432
